[package]
name = "wisp-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["serde/std", "sha2/std", "dep:thiserror"]

[dependencies]
sha2 = { version = "0.10.9", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2.0.18", optional = true }
hashbrown = "0.16.1"
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
zeroize = { version = "1.8.2", default-features = false }

[dev-dependencies]
serde_json = "1.0.149"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "wisp_bench"
harness = false
