[package]
name = "wisp-net"
version = "0.1.0"
edition = "2021"

[dependencies]
wisp-core = { path = "../wisp-core" }
tokio = { version = "1", features = ["net", "io-util", "time", "macros", "rt-multi-thread"] }
bytes = "1"
thiserror = "2"
getrandom = "0.2"
zeroize = "1"

[dev-dependencies]
serde_json = "1"
